# GUI-tests

./: AGENTS.md  Cargo.toml  PLAN.md  PLAN2.md
ai_generated/: Cargo.toml
ai_generated/src/: app.rs  geom.rs  gpu.rs  main.rs  text.rs  ui.rs
handarbeit/: .gitignore  Cargo.toml
handarbeit/src/: app.rs  geom.rs  gpu.rs  main.rs  text.rs  ui.rs
handarbeit/src/ui/: absolute_text.rs  button.rs  div.rs  label.rs  quad.rs  text.rs  window.rs
old/: PLAN.md  ff_primitives.md
old/handarbeit/: Cargo.toml
old/handarbeit/src/: geom.rs  gpu.rs  main.rs  text.rs  ui.rs
src/: app.rs  geom.rs  gpu.rs  text.rs  ui.rs
