[package]
name = "handarbeit"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
euclid = "0.22.13"
freetype-rs = "0.38.0"
harfbuzz_rs_now = "2.3.2"
pollster = "0.4.0"
taffy = "0.9.2"
wgpu = { version = "28.0.0", features = ["wgsl"] }
winit = "0.30.13"
